[workspace]

members = [
    "mmacro",
    "muse"
]

[patch."https://github.com/gtk-rs/gtk-rs"]
cairo-rs = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
cairo-sys-rs = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
gdk-pixbuf = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
gdk-pixbuf-sys = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
gio = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
gio-sys = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
glib = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
glib-macros = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
glib-sys = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
gobject-sys = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
graphene-rs = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
graphene-sys = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
pango = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
pango-sys = { git = "https://github.com/sdroege/gtk-rs-monorepo", branch = "value-trait-refactoring" }
