[package]
name = "mmacro"
version = "0.1.0"
authors = ["Asad Mehmood <asad78611@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
heck = "0.3"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full","extra-traits"] }
proc-macro-crate = "0.1"

[lib]
proc-macro = true
