[package]
name = "muse"
version = "0.1.0"
authors = ["Asad Mehmood <asad78611@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmacro = { path="../mmacro" }
gtk4 = {git = "https://github.com/gtk-rs/gtk4-rs"}
